--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<li><a href="#">Creative Direction</a></li>
 							<li><a href="#">Mobile</a></li>
 						</ul>
-					<li><a href="#">About</a></li>
+					<li><a href="#">AboutA</a></li>
 					<li><a href="#">Journal</a></li>
 					<li><a href="#">Services</a></li>
 					<li><a href="#">Contact</a></li>	
