--- a/simple/index.html
+++ b/simple/index.html
@@ -16,7 +16,7 @@
 		<section class="top_bar">
 			<div class="container">
 				<div class="logo">
-					<img src="img/logo.gif" alt="logo">
+
 				</div>
 				<nav class="navigation">
 					<ul>
@@ -24,7 +24,7 @@
 						<li><a href="#">Projects</a></li>
 						<li><a href="#">About</a></li>
 						<li><a href="#">Blog</a></li>
-						<li><a href="#">Get in Touch</a></li>		
+						<li><a href="#">Get in Touch</a></li>				
 					</ul>
 				</nav>
 			</div>	
@@ -41,16 +41,16 @@
 			<div class="title">
 				<h1 class="hero_title">We build websites and apps that people love</h1>
 				<p>Full suite of internet services in the areas of website development, web-based enterprise solutions, corporate identity and advertisement.</p>
-				<a href="#projects" class="explore"><button>Explore More</button></a>
+				<a href="#projects" class="explore">Explore More</a>
 			</div>			
 		</section>		
 	</header>
-	<main id="projects">
+	<main id="projects">3
 		<section class="work clearfix">
 			<h2>My Projects</h2>
 			<article>	
 						<figure>
-							<a href="#"><img src="img/projects/tesla.jpg" alt="Tesla"></a>			
+							<a href="#"><img src="img/projects/tesla.jpg" alt="Tesla"></a>					
 						</figure>
 						<h3>Model S</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum augue nunc, bibendum nec neque ut, aliquet ultrices ipsum.</p>				
@@ -65,7 +65,12 @@
 			</article>
 			<article>
 						<figure>
-							<a href="#"><img src="img/projects/stuhrling.jpg" alt="Sturhling"></a>					
+							<div="hover_box">
+							<h2>Year 2014 Client: Personal Project</h2>
+							<p>Digital / Mobile / Editorial</p>
+							</div><a href="#">
+							
+							<img src="img/projects/stuhrling.jpg" alt="Sturhling"></a>			
 						</figure>
 						<h3>Sturhling</h3>
 						<p>Our self-initiated project.
@@ -86,7 +91,7 @@
 		<section class="cta">
 			<h2>Showcasing your work has never been more fun</h2>
 			<p>Discover elegant solution for your online portfolio. Fast, reliable, affordable...</p>
-			<a href="#" class="button"><button>Get In Touch</button></a>
+			<a href="#" class="button">Get In Touch</a>
 		</section>
 		<section class="contact">
 			<div class="container">
@@ -94,10 +99,10 @@
 				<p>Join us on our social networks for all the latest updates, product/service announcements and many more</p>
 
 				<ul class="social">
-					<li><i class="fa fa-behance"></i><a href="#">Behance</a></li>
-					<li><i class="fa fa-facebook"></i> <a href="#">Facebook</a></li>
-					<li><i class="fa fa-pinterest-p"></i><a href="#">Pinterest</a></li>
-					<li><i class="fa fa-linkedin"></i><a href="#">LinkedIn</a></li>				
+					<li><a href="#"><i class="fa fa-behance"></i>Behance</a></li>
+					<li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
+					<li><a href="#"><i class="fa fa-pinterest-p"></i>Pinterest</a></li>
+					<li><a href="#"><i class="fa fa-linkedin"></i>LinkedIn</a></li>				
 				</ul>
 			</div>	
 		</section>
