changed to Won's solution

--- a/simple/index.html
+++ b/simple/index.html
@@ -45,7 +45,7 @@
 			</div>			
 		</section>		
 	</header>
-	<main id="projects">3
+	<main id="projects">
 		<section class="work clearfix">
 			<h2>My Projects</h2>
 			<article>	
@@ -65,12 +65,7 @@
 			</article>
 			<article>
 						<figure>
-							<div="hover_box">
-							<h2>Year 2014 Client: Personal Project</h2>
-							<p>Digital / Mobile / Editorial</p>
-							</div><a href="#">
-							
-							<img src="img/projects/stuhrling.jpg" alt="Sturhling"></a>			
+							<a href="#"><img src="img/projects/stuhrling.jpg" alt="Sturhling"></a>					
 						</figure>
 						<h3>Sturhling</h3>
 						<p>Our self-initiated project.
