changed to responsive

--- a/simple/index.html
+++ b/simple/index.html
@@ -18,7 +18,12 @@
 				<div class="logo">
 
 				</div>
-				<nav class="navigation">
+				<nav class="navigation clearfix">
+					<div class="menu clearfix">
+						<span class="icon_bar"></span>
+						<span class="icon_bar"></span>
+						<span class="icon_bar"></span>
+					</div>	
 					<ul>
 						<li class="active"><a href="#">Home</a></li>
 						<li><a href="#">Projects</a></li>
@@ -49,33 +54,83 @@
 		<section class="work clearfix">
 			<h2>My Projects</h2>
 			<article>	
-						<figure>
-							<a href="#"><img src="img/projects/tesla.jpg" alt="Tesla"></a>					
-						</figure>
+					<figure>
+						<a href="#" class="project_thumb">
+						<figcaption>
+							<div class="description">
+								<h4>
+									Year 2014<br>
+									Client: Personal Project
+								</h4>
+								<p>Digital / Mobile / Editorial</p>
+							</div>	
+						</figcaption>
+						<div class="thumbnail"><img src="img/projects/tesla.jpg" alt="Tesla"></div>	
+						</a>					
+					</figure>
 						<h3>Model S</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum augue nunc, bibendum nec neque ut, aliquet ultrices ipsum.</p>				
 
 			</article>			
 			<article>			
-						<figure>
-							<a href="#"><img src="img/projects/curiosity.jpg" alt="Curiosity"></a>					
-						</figure>	
+					<figure>
+						<a href="#" class="project_thumb">
+						<figcaption>
+							<div class="description">
+								<h4>
+									Year 2014<br>
+									Client: Personal Project
+								</h4>
+								<p>Digital / Mobile / Editorial</p>
+							</div>	
+						</figcaption>
+						<div class="thumbnail">
+							<img src="img/projects/curiosity.jpg" alt="Curiosity">
+						</div>	
+						</a>					
+					</figure>
 						<h3>Curiosity</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum augue nunc, bibendum nec neque ut, aliquet ultrices ipsum.</p>							
 			</article>
 			<article>
-						<figure>
-							<a href="#"><img src="img/projects/stuhrling.jpg" alt="Sturhling"></a>					
-						</figure>
+					<figure>
+						<a href="#" class="project_thumb">
+						<figcaption>
+							<div class="description">
+								<h4>
+									Year 2014<br>
+									Client: Personal Project
+								</h4>
+								<p>Digital / Mobile / Editorial</p>
+							</div>	
+						</figcaption>
+						<div class="thumbnail">
+							<img src="img/projects/stuhrling.jpg" alt="Sturhling">
+						</div>	
+						</a>					
+					</figure>
 						<h3>Sturhling</h3>
 						<p>Our self-initiated project.
 		Infinity ∞ is an abstract concept describing something without any limit and is relevant in a number of fields</p>				
 
 			</article>
 			<article>
-						<figure>
-							<a href="#"><img src="img/projects/penguin.jpg" alt="Penguin Books"></a>					
-						</figure>
+					<figure>
+						<a href="#" class="project_thumb">
+						<figcaption>
+							<div class="description">
+								<h4>
+									Year 2014<br>
+									Client: Personal Project
+								</h4>
+								<p>Digital / Mobile / Editorial</p>
+							</div>	
+						</figcaption>
+						<div class="thumbnail">
+							<img src="img/projects/penguin.jpg" alt="Penguin">
+						</div>	
+						</a>					
+					</figure>
 						<h3>Penguin Books</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum augue nunc, bibendum nec neque ut, aliquet ultrices ipsum.</p>				
 			</article>
@@ -93,11 +148,11 @@
 				<h2>Stay Connected</h2>
 				<p>Join us on our social networks for all the latest updates, product/service announcements and many more</p>
 
-				<ul class="social">
-					<li><a href="#"><i class="fa fa-behance"></i>Behance</a></li>
-					<li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
-					<li><a href="#"><i class="fa fa-pinterest-p"></i>Pinterest</a></li>
-					<li><a href="#"><i class="fa fa-linkedin"></i>LinkedIn</a></li>				
+				<ul class="social clearfix">
+					<li><a href="#"><i class="fa fa-behance"></i><span>Behance</span></a></li>
+					<li><a href="#"><i class="fa fa-facebook"></i><span>Facebook</span></a></li>
+					<li><a href="#"><i class="fa fa-pinterest-p"></i><span>Pinterest</span></a></li>
+					<li><a href="#"><i class="fa fa-linkedin"></i><span>LinkedIn</span></a></li>				
 				</ul>
 			</div>	
 		</section>
