--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 	<title>danny luber</title>
 	<link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/animate.css">
+	<script type="text/javascript" src="js/main.js"></script>	
 </head>
 <body>
-	<h1>coming soon....</h1>
+	<h1>DANNY LUBER</h1> 
+	<h2>interaction designer</h2>
+	<h3> - portfolio coming soon -</h3>
 </body>
 </html>
