--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 	<link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animate.css">
-	<script type="text/javascript" src="js/main.js"></script>	
-</head>
 <body>
-	<h1>DANNY LUBER</h1> 
-	<h2>interaction designer</h2>
-	<h3> - portfolio coming soon -</h3>
+	<main>
+		<h1 class="animated bounceInDown">DANNY LUBER</h1> 
+		<h2 class="animated bounceInDown">experience designer</h2>
+		<h3 class="animated fadeInUp"> - portfolio coming soon -</h3>
+	</main>
+	<footer>
+	</footer>
+<!-- javascript links -->
+	<script src="js/wow.min.js"></script>
+	<script src="js/main.js"></script>
+	<script>new WOW().init();</script>
 </body>
 </html>
