switched to eyeball animation

--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
 	<title>danny luber</title>
 	<link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/animate.css">
 <body>
 	<main>
-		<h1 class="animated bounceInDown">DANNY LUBER</h1> 
-		<h2 class="animated bounceInDown">experience designer</h2>
-		<h3 class="animated fadeInUp"> - portfolio coming soon -</h3>
+		<div id="preview">
+		<div class="header">
+			<h1>DANNY LUBER</h1>
+			<h2>experience designer</h2>
+		</div>
+	  	<div class="eyes">
+	    <div class="eyewhite"><div class="eyeblack"></div>			</div>
+	    <div class="eyewhite">				<div class="eyeblack"></div></div>
+	 	 </div>
+	 	 <h3>________________________________________</h3>
+	 	 <h4>portfolio coming soon</h4>
 	</main>
 	<footer>
 	</footer>
-<!-- javascript links -->
-	<script src="js/wow.min.js"></script>
 	<script src="js/main.js"></script>
-	<script>new WOW().init();</script>
 </body>
 </html>
