--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div id="preview">
 		<div class="header">
 			<h1>DANNY LUBER</h1>
-			<h2>experience designer</h2>
+<!-- 			<h2>experience designer</h2> -->
 		</div>
 	  	<div class="eyes">
 	    <div class="eyewhite"><div class="eyeblack"></div>			</div>
