added resume links

--- a/index.html
+++ b/index.html
@@ -2,25 +2,30 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>danny luber</title>
-	<link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
+	<title>Danny Luber</title>
+	<link rel="stylesheet" href="css/reset.css">
+	<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">	
 <body>
 	<main>
-		<div id="preview">
-		<div class="header">
-			<h1>DANNY LUBER</h1>
-<!-- 			<h2>experience designer</h2> -->
-		</div>
-	  	<div class="eyes">
-	    <div class="eyewhite"><div class="eyeblack"></div>			</div>
-	    <div class="eyewhite">				<div class="eyeblack"></div></div>
-	 	 </div>
-	 	 <h3>________________________________________</h3>
-	 	 <h4>portfolio coming soon</h4>
+	<div>
+		<h1>Danny Luber</h1> 
+		<h3>Hi! Thanks for stopping by! My portfolio is under development but will be up in the next 2-3 weeks. In the meantime, please feel free to download my <a href="pdf/DannyLuber.pdf" target="_blank">&nbsp;r&eacute;sum&eacute;&nbsp;</a> I can also be reached at <a href="mailto:dsluber@gmail.com" target="_blank">&nbsp;dsluber@gmail.com&nbsp;</a> </h3>
+	</div> 
 	</main>
 	<footer>
+		<ul class="social animated fadeInUp">
+        	<li><a href="https://twitter.com/dannyluber" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://instagram.com/dannyluber/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/dannyluber" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://medium.com/@dannyluber" target="_blank"><i class="fa fa-medium"></i></a>
+        </ul>
 	</footer>
+<!-- javascript links -->
+	<script src="js/wow.min.js"></script>
 	<script src="js/main.js"></script>
+	<script>new WOW().init();</script>
 </body>
 </html>
