--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<main>
 	<div>
 		<h1>Danny Luber</h1> 
-		<h3>Hi! Thanks for stopping by! My portfolio is under development but will be up in the next 2-3 weeks. In the meantime, please feel free to download my <a href="pdf/DannyLuber.pdf" target="_blank">&nbsp;r&eacute;sum&eacute;&nbsp;</a> I can also be reached at <a href="mailto:dsluber@gmail.com" target="_blank">&nbsp;dsluber@gmail.com&nbsp;</a> </h3>
+		<h3>Hi! Thanks for stopping by! My portfolio is under development but will be up in the next 2-3 weeks. In the meantime, please feel free to download my <a href="pdf/DannyLuber.pdf" target="_blank">&nbsp;resum&eacute;&nbsp;</a> I can also be reached at <a href="mailto:dsluber@gmail.com" target="_blank">&nbsp;dsluber@gmail.com&nbsp;</a> </h3>
 	</div> 
 	</main>
 	<footer>
