--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         	<li><a href="https://twitter.com/dannyluber" target="_blank"><i class="fa fa-twitter"></i></a></li>
             <li><a href="https://instagram.com/dannyluber/" target="_blank"><i class="fa fa-instagram"></i></a></li>
             <li><a href="https://www.linkedin.com/in/dannyluber" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="https://medium.com/@dannyluber" target="_blank"><i class="fa fa-medium"></i></a>
+<!--             <li><a href="https://medium.com/@dannyluber" target="_blank"><i class="fa fa-medium"></i></a> -->
         </ul>
 	</footer>
 <!-- javascript links -->
