--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="icon" type="img/favicomatic/png" href="favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="img/favicomatic/png" href="favicon-16x16.png" sizes="16x16" />
+	
 <body>
 	<main>
 	<div>
