--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">UI &amp; Front End Development</h4>
-                    <p class="text-muted">I begin with style guides, color pallets, iconography sets, and typography options. From there, I can transform wireframes into high-fidelity mockups. On the development side side, I am fluent in HTML &amp; CSS and skilled with jQuery, JavaScript, jQuery, Bootstrap, and Wordpress.</p>
+                    <p class="text-muted">I begin with style guides, color pallets, iconography sets, and typography options. From there, I can transform wireframes into high-fidelity mockups. On the development side, I am fluent in HTML &amp; CSS and skilled with jQuery, JavaScript, jQuery, Bootstrap, and Wordpress.</p>
                 </div>
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
