changed font and other stuff

--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Danny Luber</title>
-
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom CSS -->
     <link href="css/agency.css" rel="stylesheet">
-
     <!-- Animate CSS -->
     <link rel="stylesheet" href="css/animate.css">  
-
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700'
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
@@ -80,9 +78,9 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in"> </div>
-                <div class="intro-heading">Danny Luber</div>
-                <h3>Designer. Thinker. Coder. Writer. </h3>
-                <a href="#services" class="page-scroll btn btn-xl">Learn More</a>
+                <div class="intro-heading animated fadeIn">Danny Luber</div>
+                <h3 class="animated fadeIn">Designer. Thinker. Coder. Writer. </h3>
+                <a href="#services" class="page-scroll btn btn-xl animated bounceInUp">Learn More</a>
             </div>
         </div>
     </header>
@@ -300,7 +298,7 @@ These user personas are realistic representations of key audience segments for y
                             </p>
 
                             <h2>Ideate/Design/Iterate</h2>
-                            <p class="item-intro text-muted">Time to play with it?</p>
+                            <p class="item-intro text-muted"></p>
 
                                 <h3>Life Coach</h3>
                                 <ul class="quadrant">
