--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                         <i class="fa fa-list-alt fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Business/Service Design</h4>
-                    <p class="text-muted">I  design the required systems, processes, checklists, templates, maps, agendas, presentations, and communication channels to make sure every customer touchpoint aligns with the next. I have an obsessive mind that likes to hone in on the small details, as well as think big-picture.</p>
+                    <p class="text-muted">I  design the required systems, processes, checklists, templates, maps, agendas, presentations, and communication channels to make sure every customer touchpoint aligns with the next. My eyes are near and far sighted; one hones in on the small details while the other examines the big picture.
+                    </p>
                 </div>
 <!-- SECOND ROW OF WHAT I DO - coffee (chiller), marketing, this could be cool to include a coffee like "cool dude to get coffee with"
                 <div class="col-md-3">s
@@ -458,7 +459,8 @@ I created this video using Keynote's animation effects.
                             <h2>Fractured Prune Doughnuts</h2>
                             <p class="item-intro text-muted">Designing a design-your-own doughnut shop</p>
                             <img class="img-responsive img-centered" src="img/fp/smores.jpg" alt="">
-                            <p>From May 2014 - May 2015, I launched a new food concept in Arizona. I designed almost every system of the business from scratch - store layout, marketing, payroll, supply chain management, operations, sales, customer service, employee training - you name the vertical and I was deeply obsessed with trying to perfect it. In just one year, we grew from zero to 5 stores and over 60 employees. <br><br>This is case study illustrates the <strong>business design</strong> work I am capable of producing.
+                            <p>During 2014-2015, I led the launch of a new food concept in Arizona.  I was responsible for the design and implementation of every system of the business - store layout, digital marketing, operations, sales, customer service staffing, training, payroll, supply chain management, product development - you name the vertical and I was totally committed toward its perfection.  In just one year, we grew from zero to five stores and over sixty employees.
+ <br><br>This is case study illustrates the <strong>business design</strong> work I am capable of producing.
  
                             <h2>Ordering Process</h2>
                             <p class="item-intro text-muted">Empowering the customer to customize while keeping the business demands in mind</p>
