--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">UX &amp; IxD</h4>
-                    <p class="text-muted">I read, research, interview, and then synthesize with information architecture, personas, and scenarios. I then begin product development with app maps and low-fidelity wires (both on mobile and desktop). User test > collect insights > iterate. Repeat cycle over and over. And over and over. </p>
+                    <p class="text-muted">I read, research, interview, and then synthesize with information architecture, personas, and scenarios. I then begin product development with app maps, task flows, and and low-fidelity wires (both on mobile and desktop). User test > collect insights > iterate. Repeat cycle over and over. And over and over. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
