switched to manager

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in"> </div>
                 <div class="intro-heading animated fadeIn">Danny Luber</div>
-                <h3 class="animated fadeIn">Designer. Thinker. Coder. Writer. </h3>
+                <h3 class="animated fadeIn">Designer. Manager. Coder. Writer. </h3>
                 <a href="#services" class="page-scroll btn btn-xl animated bounceInUp">Learn More</a>
             </div>
         </div>
@@ -245,14 +245,14 @@
                             <p class="item-intro text-muted">Developing a heart-focused wearable technology</p>
                             <img class="img-responsive img-centered" src="img/pulseband/mockup.jpg" alt"">
                             <p>
-To simulate a start-to-finish product development cycle, we at DESIGNATION developed a mock product, the Pulseband. The Pulseband is a wearable technology that measures users’ blood pressure, heart rate, steps, sleep patterns among other vitals. The purpose of this project was to define the scope of the the Pulseband’s capabilities and develop a mobile app alongside those functionalities. Over the course of the project, we implemented various product development methodologies such as the <a href="http://www.gv.com/sprint/" target="_blank">Google 5-Day Sprint</a>.<br><br>
+To simulate a start-to-finish product development cycle, we at DESIGNATION developed a mock product, the Pulseband. The Pulseband is a wearable technology that measures users’ blood pressure, heart rate, steps, sleep patterns among other vitals. The purpose of this project was to define the scope of the the Pulseband’s capabilities and develop a mobile app alongside those functionalities. Over the course of the project, we implemented various product development methodologies such as <a href="https://www.wikiwand.com/en/Scrum_(software_development)" target="_blank">scrum</a> and the <a href="http://www.gv.com/sprint/" target="_blank">Google 5-Day Sprint</a>.<br><br>
 
 As leader of the UX effort, I conducted a robust discovery phase to gain industry insight, understand product line potential, and identify key areas of focus for user research. I interviewed potential users of the Pulseband and subject matter experts (SMEs) in the medical and cardiac-related fields. I synthesized my findings by producing deliverables that could be used by other members of my team. On the IxD side, I helped developed wireframes and prototypes, conduct user testing, and iterate on our designs based on user feedback.                 
                             </p>
             
                             <h2>Discovery</h2>
                             <p class="item-intro text-muted">Let's learn some stuff.</p>
-                             <ul class="quadrant">
+                            <ul class="quadrant">
                                 <li>
                                     <h4>Research</h4>
                                     <img class "img-responsive" src="img/pulseband/screenshots.jpg" alt="">
@@ -273,7 +273,7 @@ Next, I interviewed subject matter experts and potential users to hear both side
                                 <li>
                                     <h4>Synthesize</h4>
                                     <img class "img-responsive" src="img/pulseband/postits.jpg" alt="">
-                                </li>                    
+                                </li>                 
                             </ul>
                             <p>
 Competitive analysis spread across a range of industries, technologies, and brand types. Fuelband, Holter, AliveCor, Jawbone, etc. - What metrics are each of the competitors tracking? Where is there opportunity for Pulseband to differentiate itself? How does that shift who the target consumer is for Pulseband? And how do we build a product accordingly?<br><br>
