--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
-<!--                     <li>
+                    <li>
                         <a class="page-scroll" href="#about">About</a>
-                    </li> -->
+                    </li>
 <!--                     <li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li> -->
@@ -78,7 +78,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in"> </div>
                 <div class="intro-heading animated fadeIn">Danny Luber</div>
-                <h3 class="animated fadeIn">Designer. Manager. Coder. Writer. </h3>
+                <h3 class="animated fadeIn">Designer. Thinker. Coder. Writer. </h3>
                 <a href="#services" class="page-scroll btn btn-xl animated bounceInUp">Learn More</a>
             </div>
         </div>
@@ -115,7 +115,7 @@
                         <i class="fa fa-list-alt fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Business/Service Design</h4>
-                    <p class="text-muted">I  design the required systems, processes, checklists, templates, maps, agendas, presentations, and communication channels to make sure every customer touchpoint aligns with the next. My eyes are near and far sighted; one hones in on the small details while the other examines the big picture.
+                    <p class="text-muted">I  design the required systems, processes, checklists, templates, visuals, presentations, and communication channels to make sure every customer touchpoint aligns with the next. I am equally tuned into perfecting the small details as well as the big picture.
                     </p>
                 </div>
 <!-- SECOND ROW OF WHAT I DO - coffee (chiller), marketing, this could be cool to include a coffee like "cool dude to get coffee with"
@@ -198,6 +198,87 @@
                 </div>
             </div>
             
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">About</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2009-2011</h4>
+                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>March 2011</h4>
+                                    <h4 class="subheading">An Agency is Born</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>December 2012</h4>
+                                    <h4 class="subheading">Transition to Full Service</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>July 2014</h4>
+                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>Be Part
+                                    <br>Of Our
+                                    <br>Story!</h4>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
