added about section

--- a/index.html
+++ b/index.html
@@ -56,12 +56,9 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
-<!--                     <li>
+                    <li>
                         <a class="page-scroll" href="#about">About</a>
-                    </li> -->
-<!--                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li> -->
+                    </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -115,7 +112,7 @@
                         <i class="fa fa-list-alt fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Business/Service Design</h4>
-                    <p class="text-muted">I  design the required systems, processes, checklists, templates, visuals, presentations, and communication channels to make sure every customer touchpoint aligns with the next. I am equally tuned into perfecting the small details as well as the big picture.
+                    <p class="text-muted">I  design the required systems, processes, checklists, templates, maps, agendas, presentations, and communication channels to make sure every customer touchpoint aligns with thes next. I am equally tuned into perfecting the small details as well as the big picture.
                     </p>
                 </div>
 <!-- SECOND ROW OF WHAT I DO - coffee (chiller), marketing, this could be cool to include a coffee like "cool dude to get coffee with"
@@ -188,7 +185,91 @@
             </div>
         </div>
     </section>
- 
+  <!-- About Section -->
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">About</h2>
+                    <br><br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/college.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2009-2013</h4>
+                                    <h4 class="subheading">THE COLLEGE YEARS</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Graduated with a Psychology degree, but enjoyed classes in architecture, theatre, philosophy, screenwriting, and documentary production. Coached tennis, basketball, and chess to underserved communities on the side. Interned at a branding agency called <a href="http://www.heartbeatideas.com/" target="_blank">Heartbeat Ideas</a> one summer, and taught 7th Grade Sceince at <a href="https://www.breakthroughcollaborative.org/" target="_blank">Breakthrough Collaborative</a> another summer. Also met my best friends in the world! </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/sarrc.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2013-2014</h4>
+                                    <h4 class="subheading">WORKING IN AUTISM</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">I led classes, clubs, and workshops at the globally-recognized <a href="http://www.autismcenter.org/" target="_blank">Southwest Autism Resource and Research Center</a>. Organized field trips all over the city, spearheaded volunteer activities with local nonprofits, assisted in research efforts, and helped adults acquire jobs and learn those jobs on-site - this is just a nibble of the awesomeness I was able to do at SARRC. </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/doughnuts.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2014-2015</h4>
+                                    <h4 class="subheading">GROWING A BUSINESS</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">With the assistance of LOTS of coffee and sugar, I helped turn an idea into a money-making enterprise. With my experience at <a href="http://fracturedprune.com/" target="_blank">Fractured Prune Doughnuts</a>, I held just about every title imaginable - supply chain coordinator, social media manager, HR director, business designer. I learned what it takes (A LOT!) to get a business off the ground and wouldn’t take that experience back for anything. 
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/designation.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>MAY 2015 - SEPTEMBER 2015</h4>
+                                    <h4 class="subheading">BOOTCAMP TIME</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">I cannot speak highly enough about my experience at <a href="http://designation.io/" target="_blank">DESIGNATION</a>. Four months, 70 hours/week - this very rigorous UX/UI/Front end development bootcamp provided the space and instruction for me to become fluent in multiple coding languages and design platforms/software.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>Are
+                                    <br>You
+                                    <br>Next?</h4>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -200,9 +281,6 @@
             
         </div>
     </section>
-
-    <!-- About Section -->
-
 
     <footer>
         <div class="container">
@@ -220,11 +298,11 @@
                         </li>
                     </ul>
                     </div>
-                    <div class="col-md-4">
-                        <p>
-                            Download my <a href="pdf/DannyLuber.pdf" target="_blank">resum&eacute;</a>
-                        </p>
+                    <div>
+                    <span class="copyright">Download my <a href="pdf/DannyLuber.pdf" target="_blank">resum&eacute;</a>
+                    </span>
                     </div> 
+ 
                 </div>
             </div>
         </div>
@@ -343,7 +421,11 @@ I created this video using Keynote's animation effects.
                                 <source src="img/pulseband/scenarios.m4v" type="video/mp4"> 
                                     <source src="img/pulseband/scenarios.m4v" type="video/ogg"></source>
                                 </source>
-                            </video>                              
+                            </video>
+<!--                             <h2>Prototypes</h2><br><br>
+                            <h3>Onboarding</h3>
+                            <iframe src="axure/iframe.html" frameborder="0" style="height: 100%; border: none"></iframe>
+                            <h3> -->
 
                             <h3>More Screens</h3>
                             <img class="img-responsive img-centered" src="img/pulseband/wires.png" alt""> 
